open HMR and repair problems

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>html热模块更新生效~</h1>
   <div class="img_wrap">
     <div class="img1"></div>
     <div class="img2"></div>
